# markdown-reader

./: .gitignore  Cargo.toml  README.md  build.rs
.agents/: agent_audit.sqlite
.beads/: issues.jsonl  metadata.json
assets/: app-icon-32.rgba
scripts/: build-windows.cmd
src/: main.rs
themes/: clean.css  ink.css  paper.css  slate.css
