[package]
name = "markdown-reader"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.100"
pulldown-cmark = "0.13.4"
rfd = { version = "0.17.2", default-features = false, features = ["common-controls-v6"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.34.5"
ureq = "2.12.1"
url = "2.5.8"
wry = "0.55.1"

[build-dependencies]
winresource = "0.1.31"
